Fix spacing in header info

--- a/css/theme.css
+++ b/css/theme.css
@@ -50,6 +50,7 @@ div {
     float: left;
 	margin: 0px 0px 0px 0px;
 	padding: 10px 0px 20px 0px;
+    white-space: break-spaces;
 
 }
 
@@ -58,6 +59,7 @@ div {
     float: left;
 	margin: 0px 00px 0px 0px;
 	padding: 10px 0px 00px 50px;
+    white-space:  break-spaces;
 
 }
 
